# titanic-survival-predictor

./: README.md  pyproject.toml  titanic-predictor.ipynb
